--- a/src/app/mainSite/fees-section/fees-section.component.html
+++ b/src/app/mainSite/fees-section/fees-section.component.html
@@ -14,8 +14,8 @@
     </div>
 </section>
 <section class = "bubbles">
-    <div class="container">
-        <p class="top-cont">
+    <div class="container-2">
+        <p class="top-cont2">
             Babies/Todlers<br><br>
             From 3 Months to 36 Months old.
         </p>
