--- a/src/app/managerPortal/manager-home/manager-home.component.html
+++ b/src/app/managerPortal/manager-home/manager-home.component.html
@@ -64,11 +64,11 @@
           <p>
             
             <li *ngFor="let item of notifications">
-              <mat-card class="notif-bubble">
+      
               {{item.grade}}
               {{item.title}}<br>
-              {{item.message}}
-              </mat-card>
+              {{item.message}}<br><br>
+              
             </li>
           </p>
         </mat-card-content>
