--- a/src/app/parentPortal/parent-profile/parent-profile.component.html
+++ b/src/app/parentPortal/parent-profile/parent-profile.component.html
@@ -1,5 +1,6 @@
 <div class="container">
     <img src= "assets/images/tasha-staff9.png">
+    <mat-card>
     <form class="example-form">
         <mat-form-field class="example-full-width" appearance="fill">
           <mat-label>First Name</mat-label>
@@ -41,7 +42,7 @@
         <button mat-raised-button color="warn">Reset</button>
       
       </form>
-      
+      </mat-card>
     </div>
 
       
