--- a/src/app/mainSite/career-section/career-section.component.css
+++ b/src/app/mainSite/career-section/career-section.component.css
@@ -31,8 +31,9 @@ hr{
 }
 
 .cards{
-    display: flex;
+    columns: 2;
     justify-content: space-evenly;
+    padding-bottom: 100px;
 }
 
 .card{
@@ -47,4 +48,9 @@ hr{
     text-align: center;
     position: relative;
     left: 34%;
+}
+
+.main{
+    position: relative;
+    top: 50px;
 }
