--- a/src/app/mainSite/fees-section/fees-section.component.html
+++ b/src/app/mainSite/fees-section/fees-section.component.html
@@ -14,18 +14,19 @@
     </div>
 </section>
 <section class = "bubbles">
-    <div class="container-2">
-        <p class="top-cont2">
+    <div class="container3">
+        <p class="top-cont3">
             Babies/Todlers<br><br>
             From 3 Months to 36 Months old.
         </p>
-        <p class="bott-cont">
+        <p class="bott-cont3">
             Full Day:<br><br>
             R2700.00 per month - All inclusive <br><br>
             (A non-refundable annual registration fee of R850.00 to be paid on
             <br>enrolment for 2021 and return learners only pay R400.00)
         </p>
     </div>
+
     <div class="container-2">
         <p class="top-cont2">
             Children<br><br>
