--- a/src/app/mainSite/home-section/home-section.component.html
+++ b/src/app/mainSite/home-section/home-section.component.html
@@ -37,7 +37,7 @@
       serious work feel like play.  All staff have undergone excessive Covid training and we will<br>
       continue to keep abreast of any changes in this regards</p>
       <div class = "btn-color">
-        <button class = "btnRegister" onclick="location.href='/Parent-Application/Application';">APPLY TODAY!</button>
+        <button class = "btnRegister" onclick="location.href='/Parent-Registration/Parent-Application';">APPLY TODAY!</button>
       </div>
   </section>
   <div class="explore">
@@ -47,13 +47,13 @@
     <div class="container1">
       <img src="assets/images/kids-playing-bubbles-istock.jpg" alt="kis-Running" class="image" style="width:100%">
       <div class="middle">
-        <input class = "mid-btn" type="button" onclick="location.href='https://google.com';" value="VIEW NEWS" />
+        <input class = "mid-btn" type="button" onclick="location.href='Fees';" value="VIEW FEES" />
       </div>
     </div>
     <div class="container1">
       <img src="assets/images/playground-2263827_1920.jpg" alt="Playground" class="image" style="width:100%">
       <div class="middle">
-        <input class = "mid-btn" type="button" onclick="location.href='https://google.com';" value="OUR FACILITIES" />
+        <input class = "mid-btn" type="button" onclick="location.href='Curriculum';" value="OUR CURRICULUM" />
       </div>
     </div>
     <div class="container1">
