--- a/src/app/registration/Teacher/teacher-register-portal/teacher-register-portal.component.css
+++ b/src/app/registration/Teacher/teacher-register-portal/teacher-register-portal.component.css
@@ -1,5 +1,6 @@
+
 mat-toolbar {
-    background: hsl(315, 97%, 46%);
+    background: #ec6c03;
     color: white;
     height: 65px;
 }
@@ -12,7 +13,7 @@ mat-sidenav {
     margin:16px;
     width: 300px;
     border-right: none;
-    background: hsl(315, 97%, 46%);
+    background: #ec6c03;
     color: white;
     padding: 16px;
     text-align: center;
@@ -22,7 +23,7 @@ mat-sidenav {
 
 button{
     color:white;
-    background-color: hsl(315, 97%, 46%);
+    background-color:#ec6c03;
 }
 
 
@@ -62,7 +63,8 @@ mat-icon{
 }
 .avatar{
     border-radius: 50%;
-    width: 11rem;
+    width: 10rem;
+    height: 10rem;
 }
 .name {
     margin: 0;
