--- a/src/app/teacherPortal/report-view/report-view.component.html
+++ b/src/app/teacherPortal/report-view/report-view.component.html
@@ -1,1 +1,52 @@
-<p>report-view works!</p>
+<router-outlet></router-outlet>
+<div class="cont">
+
+<mat-card class="example-card">
+    <mat-card-header>
+    
+      <mat-card-title>Masixole Matolweni</mat-card-title>
+      <mat-card-subtitle>Grade R</mat-card-subtitle>
+     
+    
+    </mat-card-header>
+    
+    <mat-card-content>
+        <div>
+            <mat-card class="example-card">
+            
+                <mat-card-content>
+                    <p>
+                    <label>Reading</label><label class="read">A</label><br>
+                    <label>ABC's</label> <label class="abc">A</label><br>
+                    <label>Playing</label> <label class="play">A</label><br>
+                    <label>Listening & Talking</label> <label class="listen">A</label><br>
+                    <label>Drawing & Coloring</label> <label>A</label><br>
+                        </p>
+                </mat-card-content>
+            </mat-card> 
+        </div>
+        <div class="img">
+            <img src="assets/images/tisha-staff7.png">
+        </div> 
+    </mat-card-content>
+    <mat-card-actions>
+    <div>
+     <p class="comment">
+         Comments<br>
+         <textarea></textarea>
+     </p>
+    </div>
+    <div>
+    <p class="sign">
+        Signed By: A.Tyesi
+    </p>
+    </div>
+
+    </mat-card-actions>
+  </mat-card>
+<div class="btns">
+    <button>Go Back</button>
+    <button>Edit</button>
+</div>
+  
+</div>
