--- a/src/app/adminPortal/admin-home/admin-home.component.html
+++ b/src/app/adminPortal/admin-home/admin-home.component.html
@@ -1,1 +1,81 @@
-<p>admin-home works!</p>
+<router-outlet></router-outlet>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<div class="cont">
+    <div class="card">
+<mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>School Fees</mat-card-title>
+  
+    </mat-card-header>
+    
+    <mat-card-content>
+      <p>
+        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+        bred for hunting.
+      </p>
+    </mat-card-content>
+   
+  </mat-card>
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Additional Fees</mat-card-title>
+ 
+    </mat-card-header>
+    
+    <mat-card-content>
+      <p>
+        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+        bred for hunting.
+      </p>
+    </mat-card-content>
+   
+  </mat-card><mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Balance Due</mat-card-title>
+     
+    </mat-card-header>
+    
+    <mat-card-content>
+      <p>
+        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+        bred for hunting.
+      </p>
+    </mat-card-content>
+   
+  </mat-card>
+
+  </div>
+
+  <div class="card3">
+    <mat-card class="example-cards">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Mountain Dash</mat-card-title>
+          <mat-card-subtitle>Notice Board</mat-card-subtitle>
+        </mat-card-header>
+        
+        <mat-card-content>
+          <p>
+            <li *ngFor="let item of notifications">
+              {{item.title}}<br>
+              {{item.message}}
+              {{item.Id}}<br><br>
+            </li>
+          </p>
+        </mat-card-content>
+       
+      </mat-card> 
+
+      
+</div>
+</div>
+
+
+
+  
