--- a/src/app/registration/Parent/parent-register-form/parent-register-form.component.html
+++ b/src/app/registration/Parent/parent-register-form/parent-register-form.component.html
@@ -31,6 +31,11 @@
         <input matInput placeholder="E.g Name@gmail.com" formControlName="PEmail" required>
       </mat-form-field><br>
       <mat-form-field>
+        <mat-label>Preffered Password</mat-label>
+        <input matInput placeholder="For signing in" formControlName="Password" required>
+      </mat-form-field><br>
+      
+      <mat-form-field>
         <mat-label>1<sup>st</sup> Line Address</mat-label>
         <input matInput placeholder="Address No and Street Name" formControlName="Padd1" required>
       </mat-form-field>
@@ -222,7 +227,7 @@
       </mat-radio-button>
       
       </mat-radio-group>
-
+      <h2 class="example-h2">Select Additional Programs</h2>
       <mat-radio-group
       aria-labelledby="example-radio-group-label"
       class="example-radio-group"
