--- a/src/app/managerPortal/manager-home/manager-home.component.html
+++ b/src/app/managerPortal/manager-home/manager-home.component.html
@@ -6,14 +6,12 @@
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>Total Learners</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+     
     </mat-card-header>
     
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        {{Learners.length}}
       </p>
     </mat-card-content>
    
@@ -22,14 +20,12 @@
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>Total Teachers</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+     
     </mat-card-header>
     
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+      {{Teacher.length}}
       </p>
     </mat-card-content>
    
@@ -37,14 +33,17 @@
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>Centre Funds</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+     
     </mat-card-header>
     
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        <li *ngFor="let amount of Funds">
+      
+          R{{amount['fundsAvailable']}}
+         
+          
+        </li>
       </p>
     </mat-card-content>
    
