--- a/src/app/RegionalPortal/syllabus/syllabus.component.html
+++ b/src/app/RegionalPortal/syllabus/syllabus.component.html
@@ -13,7 +13,7 @@
                 <label>Centre Name:</label> &nbsp;&nbsp;&nbsp;&nbsp;
                 <select class="centre" name=notifs> Please select data below
                     <option *ngFor="let notifs of notifications" value="notifs.Message">
-                  {{ notifs.Message }}
+                  {{ notifs.message }}
                 </option>
                 
                  </select>
