--- a/src/app/RegionalPortal/regional-manager-home/regional-manager-home.component.html
+++ b/src/app/RegionalPortal/regional-manager-home/regional-manager-home.component.html
@@ -5,15 +5,13 @@
 <mat-card class="example-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Total Learners</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      <mat-card-title>My Managers</mat-card-title>
+      
     </mat-card-header>
     
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        {{centres.length}}
       </p>
     </mat-card-content>
    
@@ -63,7 +61,7 @@
         <mat-card-content>
           <p>
             <li *ngFor="let item of notifications">
-              {{item.Message}}
+              {{item.message}}
               {{item.Id}}
             </li>
           </p>
