--- a/src/app/managerPortal/funding-application/funding-application.component.html
+++ b/src/app/managerPortal/funding-application/funding-application.component.html
@@ -9,27 +9,29 @@
             <img src="assets/images/logo.png">
         </div>
         <div class="form">
-            <form [formGroup]="angForm" (ngSubmit)="postdata(angForm)" autocomplete="off" >
+            <form [formGroup]="Forms"autocomplete="off" >
                 <label>Centre Name:</label> &nbsp;&nbsp;&nbsp;&nbsp;
-                <select class="centre" name=notifs> Please select data below
-                    <option *ngFor="let notifs of notifications" value="notifs.Message">
-                  {{ notifs.Message }}
+                <input type="text" *ngFor = "let notifs of centre" value="{{notifs['centreName']}}" formControlName = "centres">
+            
+                <input id="displays" type="text" *ngFor = "let notifs of centre" value="{{ notifs['centreId'] }}" >
+
+                 <br>
+
+                 <label>Coordinator:</label> &nbsp;&nbsp;&nbsp;&nbsp;
+                 <input type="text" *ngFor = "let lia of liaison" value=" {{ lia['firstName'] }}" readonly>
+
+                  
+                  <select id="displays" class="liaison" name=notifs> Please select data below
+                    <option *ngFor="let lia of liaison" value="lia.regionalCoordinatorId">
+                  {{ lia['regionalCoordinatorId'] }}
                 </option>
                 
-                 </select>
-                 <br>
-                 <label>Liaison:</label> &nbsp;&nbsp;&nbsp;&nbsp;
-                 <select class="liaison" name=notifs> Please select data below
-                     <option *ngFor="let notifs of notifications" value="notifs.Message">
-                   {{ notifs.Message }}
-                 </option>
-                 
-                  </select>
+                 </select> 
                   <br>
-                  <label>Amoount Requested:</label> &nbsp;&nbsp;&nbsp;&nbsp;
-                  <input type="text">
+                  <label>Amount Requested:</label> &nbsp;&nbsp;&nbsp;&nbsp;
+                  <input type="text" formControlName = "amount">
                    <br>
-                   <input type="submit" value="Send">
+                   <input type="submit" value="Send" (click)="postdata(Forms)">
                     
             </form>
         </div>
