--- a/src/app/managerPortal/manager-profile/manager-profile.component.html
+++ b/src/app/managerPortal/manager-profile/manager-profile.component.html
@@ -3,44 +3,45 @@
 <div class="container">
     <img src= "assets/images/tasha-staff9.png">
     <mat-card>
-    <form class="example-form">
+
+    <form [formGroup]="FormGroup" class="example-form" *ngFor = "let item of manager">
         <mat-form-field class="example-full-width" appearance="fill">
-          <mat-label>First Name</mat-label>
-          <input matInput placeholder="Ex. John">
+          <mat-label>{{item.firstName}}</mat-label>
+          <input matInput placeholder="First Name" formControlName="name">
         </mat-form-field> &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Last Name</mat-label>
-            <input matInput placeholder="Ex. Smith">
+            <input matInput value="{{item.surname}}" formControlName="surname">
         </mat-form-field><br>
     
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Cell No</mat-label>
-            <input matInput placeholder="Ex. 0617872707">
+            <input matInput value="{{item.cellNo}}" formControlName="cellno">
         </mat-form-field>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Work No</mat-label>
-            <input matInput placeholder="Ex. 0414054524">
+            <mat-label>Email</mat-label>
+            <input matInput value="{{item.emailAddress}}" formControlName="email">
         </mat-form-field> <br>
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>1<sup>st</sup> Line of Address</mat-label>
-            <input matInput placeholder="51 Winderemere Road Humewood">
+            <input matInput value="{{item.line1Address}}" formControlName="line1">
         </mat-form-field>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>2<sup>nd</sup> Line of Address</mat-label>
-            <input matInput placeholder="Port Elizabeth">
+            <input matInput value="{{item.line2Address}}" formControlName="line2">
         </mat-form-field> <br>
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>3<sup>rd</sup> Line of Address</mat-label>
-            <input matInput placeholder="Ex. Eastern Cape">
+            <input matInput value="{{item.City}}" formControlName="city">
         </mat-form-field>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Postal Code</mat-label>
-            <input matInput placeholder="Ex. 6001">
+            <input matInput value="{{item.zip}}" formControlName="zip">
         </mat-form-field> <br>
-        <button mat-raised-button color="primary">Submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
+        <button mat-raised-button color="primary" (click)="postdata(FormGroup)">Submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
         <button mat-raised-button color="warn">Reset</button>
       
       </form>
