--- a/src/app/parentPortal/parent-home/parent-home.component.html
+++ b/src/app/parentPortal/parent-home/parent-home.component.html
@@ -11,9 +11,9 @@
     
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        <li *ngFor="let amount of fees"> 
+          {{amount['fees']}}
+        </li>
       </p>
     </mat-card-content>
    
@@ -27,24 +27,27 @@
     
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        <li *ngFor="let amount of additionalFees"> 
+          {{amount['additionalFees']}}
+        </li>
       </p>
     </mat-card-content>
    
   </mat-card><mat-card class="example-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Balance Due</mat-card-title>
+      <mat-card-title>My Child's Programs</mat-card-title>
      
     </mat-card-header>
     
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        <li *ngFor="let item of childClass"> 
+          {{item['className']}}
+        </li>
+        <li *ngFor="let item of childPrograms"> 
+          {{item['packageName']}}
+        </li>
       </p>
     </mat-card-content>
    
@@ -62,7 +65,7 @@
         
         <mat-card-content>
           <p>
-            <li *ngFor="let item of notifications">
+            <li *ngFor="let item of notifs">
               {{item.title}}<br>
               {{item.message}}
               {{item.Id}}<br><br>
