--- a/src/app/parentPortal/parent-payment/parent-payment.component.html
+++ b/src/app/parentPortal/parent-payment/parent-payment.component.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="py-5 text-center">
           
-          <h2>Checkout form</h2>
-          <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          <h2>Fees Payment</h2>
+          <p class="lead">Please fill in your bank details to pay your childs school fees</p>
         </div>
         <div class="row">
           <div class="col-md-4 order-md-2 mb-4">
@@ -45,14 +45,7 @@
                 <strong>R20</strong>
               </li>
             </ul>
-            <form class="card p-2">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Promo code">
-                <div class="input-group-append">
-                  <button type="submit" class="btn btn-secondary">Redeem</button>
-                </div>
-              </div>
-            </form>
+            
           </div>
           <div class="col-md-8 order-md-1">
             <h4 class="mb-3">Billing Details</h4>
