--- a/src/app/parentPortal/parent-profile/parent-profile.component.html
+++ b/src/app/parentPortal/parent-profile/parent-profile.component.html
@@ -1,42 +1,42 @@
 <div class="container">
     <img src= "assets/images/tasha-staff9.png">
     <mat-card>
-    <form class="example-form">
+    <form [formGroup]="FormGroup" class="example-form"  *ngFor = "let item of parent">
         <mat-form-field class="example-full-width" appearance="fill">
           <mat-label>First Name</mat-label>
-          <input matInput placeholder="Ex. John">
+          <input matInput value="{{item.parentName}}">
         </mat-form-field> &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Last Name</mat-label>
-            <input matInput placeholder="Ex. Smith">
+            <input matInput value="{{item.parentSurname}}">
         </mat-form-field><br>
     
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Cell No</mat-label>
-            <input matInput placeholder="Ex. 0617872707">
+            <input matInput value="{{item.parentContactNo}}">
         </mat-form-field>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Work No</mat-label>
-            <input matInput placeholder="Ex. 0414054524">
+            <mat-label>Email</mat-label>
+            <input matInput value="{{item.parentEmailAddress}}">
         </mat-form-field> <br>
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>1<sup>st</sup> Line of Address</mat-label>
-            <input matInput placeholder="51 Winderemere Road Humewood">
+            <input matInput value="{{item.firstLineAddress}}">
         </mat-form-field>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>2<sup>nd</sup> Line of Address</mat-label>
-            <input matInput placeholder="Port Elizabeth">
+            <input matInput value="{{item.secondLineAddress}}">
         </mat-form-field> <br>
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>3<sup>rd</sup> Line of Address</mat-label>
-            <input matInput placeholder="Ex. Eastern Cape">
+            <input matInput value="{{item.ThirdLineAddress}}">
         </mat-form-field>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Postal Code</mat-label>
-            <input matInput placeholder="Ex. 6001">
+            <input matInput value="{{item.zip}}">
         </mat-form-field> <br>
         <button mat-raised-button color="primary">Submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
         <button mat-raised-button color="warn">Reset</button>
