--- a/src/app/RegionalPortal/regional-manager-home/regional-manager-home.component.html
+++ b/src/app/RegionalPortal/regional-manager-home/regional-manager-home.component.html
@@ -11,7 +11,7 @@
     
     <mat-card-content>
       <p>
-        {{centres.length}}
+        <!-- {{Managers.length}} -->
       </p>
     </mat-card-content>
    
@@ -19,15 +19,13 @@
   <mat-card class="example-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Total Teachers</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      <mat-card-title>Total Centres</mat-card-title>
+      
     </mat-card-header>
     
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        <!-- {{centres.length}} -->
       </p>
     </mat-card-content>
    
@@ -35,14 +33,12 @@
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>Centre Funds</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      
     </mat-card-header>
     
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        <!-- {{Funds}} -->
       </p>
     </mat-card-content>
    
